# lists3

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml  rust.yml
src/: aws.rs  lib.rs  main.rs
src/squire/: constant.rs  mod.rs  parser.rs  settings.rs
src/templates/: list.rs  list_bootstrap.rs  list_vanilla.rs  mod.rs
