[package]
name = "lists3"
version = "0.0.3"
description = "Light-weight CLI tool to create a file browser for S3 buckets provisioning bucket listing."
edition = "2021"
authors = ["Vignesh Rao"]
license = "MIT"
rust-version = "1.93.1"
documentation = "https://docs.rs/lists3/latest/lists3"
homepage = "https://github.com/thevickypedia/lists3"
repository = "https://github.com/thevickypedia/lists3"
keywords = ["s3-filebrowser", "bucket-listing"]
categories = ["filesystem", "embedded", "development-tools", "visualization"]
include = ["/src", "LICENSE"]
exclude = [".github", ".gitignore", "README.md"]

[lib]
name = "lists3"
path = "src/lib.rs"

[[bin]]
name = "lists3"
path = "src/main.rs"

# Docs release queue
# https://docs.rs/releases/queue
# Verify docs locally
# cargo doc --no-deps --document-private-items --open
[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
minijinja = { version =  "2.15.1", features = ["loader"] }
url = "2.5.8"
serde_json = "1.0.149"
aws-sdk-s3 = { version = "1.123.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
tokio = { version = "1.49.0", features = ["full"] }
